# spider

./: .clang-format  .editorconfig  .gitignore  .guix-authorizations  CMakeLists.txt  README.md  channels.scm  guix.scm  jakeforster-51C89660.key
.github/workflows/: benchmark.yml  macos.yml  windows.yml
apps/: CMakeLists.txt  spider_dicom_dump.cc  spider_make_tia_benchmark.cc  spider_read_dicom.cc  spider_tia.cc
benchmark/: CMakeLists.txt  guix.scm  index.rst  joint_hist.cc  joint_hist.gp  run.sh.in  slice_compare.cc  tia.scm  tia.sh.in  utils.scm
benchmark/snmmi/: CMakeLists.txt  guix.scm  run.sh.in
benchmark/snmmi/pt4/: CMakeLists.txt  guix.scm  run.sh.in
benchmark/snmmi/pt6/: CMakeLists.txt  guix.scm  run.sh.in  set_modality_pt.cc
benchmark/tia/: CMakeLists.txt  guix.scm  hist.gp  log10_ratio.cc  run.sh.in
doc/: README.md  benchmark.md  build.md
etc/: Parameters_Rigid.txt
man/: CMakeLists.txt  spider.1  spider_tia.1
src/: CMakeLists.txt  exp_fit_functor.h  logging.cc  logging.h  output_filenames.cc  output_filenames.h  spect.cc  spect.h  spect_format.h  spider_make_tia_benchmark.cc  tia_pipeline.cc  tia_pipeline.h  tz_compat.h
src/tia/: CMakeLists.txt  exp_fit_functor.h  tia_pipeline.cc  tia_pipeline.h
test/: CMakeLists.txt  test_exp_fit_functor.cc  test_output_filenames.cc  test_spect.cc  test_tia_pipeline.cc  test_utils.h
test/apps/: CMakeLists.txt
test/tia/: CMakeLists.txt  test_exp_fit_functor.cc  test_tia_pipeline.cc
